src/components/SavedCardsPicker/SavedCardsPicker.module.css
@import '../../style/variable.global.css';

.card {
  display: flex;
  border-radius: var(--borderRadius);
  background-color: var(--seventhColor);
  margin: 0 0 var(--marginXMedium) 0;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);
  overflow-x: auto;
  padding: var(--noMargin);
  max-height: 100%;
  max-width: 100%;
}

.left {
  display: flex;
  flex: 1;
  flex-direction: column;
}

.informationTotalRefund {
  border-top: 2px solid var(--lightGrey);
  padding: var(--marginSmall) var(--marginMediumXL) 0 0;
}

.paymentMethodBox {
  margin : 0 0 0 0;
  padding: var(--marginSmall);
  margin-left: 40px;
  max-width: 720px;
  max-height: 100%;
  border-radius: var(--borderRadius);
  background-color: var(--seventhColor);
  overflow-x: auto;
  overflow-y: hidden;
}

.paymentCardsTable {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.paymentCardsHeaderRow {
  display: flex;
  font-weight: var(--fontWeightBold);
}

.paymentCardsHeader {
  padding: var(--marginSmall) var(--marginMLarge) var(--marginSmall) 0;
}

.numberHeader {
  padding-right: 70px;
}

.expireHeader {
  padding-right: 130px;
}

@media (max-width: 480px) {
  .paymentCardsHeaderRow {
    display: none;
  }

  .paymentMethodBox {
    margin-left : 0;
  }

}

.typeCardHeader {
  flex: 1;
  padding-left: var(--marginXLarge);
}

.paymentTableFooter {
  display: flex;
  align-items: center;
  padding: var(--marginSmall);
  padding-left: var(--marginXMedium);
}

.addPaymentCardIcon {
  width: var(--marginMedium);
  height: var(--marginMedium);
}

.addCardButton {
  vertical-align: middle;
  align-items: center;
}

